# hyprland-guiutils

./: CMakeLists.txt  flake.nix
nix/: default.nix  overlays.nix  shell.nix
utils/dialog/: CMakeLists.txt
utils/dialog/src/: main.cpp
utils/donate-screen/: CMakeLists.txt
utils/donate-screen/src/: main.cpp
utils/run/: CMakeLists.txt
utils/run/src/: main.cpp
utils/update-screen/: CMakeLists.txt
utils/update-screen/src/: main.cpp
utils/welcome/src/: main.cpp
